[gd_scene load_steps=106 format=3 uid="uid://b11hmbmp1qw1e"]

[ext_resource type="PackedScene" uid="uid://cw6pat17gtbr3" path="res://Scenes/DefenceTowers/MagicTower/magic_tower.tscn" id="1_kp7gh"]
[ext_resource type="Texture2D" uid="uid://cnkija7i21j1h" path="res://Assets/Images/UI/InformationBar/magic-id-5.png" id="2_3pdru"]
[ext_resource type="Script" path="res://Scripts/DefenceTowers/MagicTowers/witch_tower.gd" id="2_vxsbu"]
[ext_resource type="Script" path="res://Scripts/Datas/TowerData.gd" id="2_xqequ"]
[ext_resource type="PackedScene" uid="uid://cjpn07gcbekr1" path="res://Scenes/DefenceTowers/tower_skill_button.tscn" id="4_8fl7e"]
[ext_resource type="Texture2D" uid="uid://c7net4flivij3" path="res://Assets/Images/DefenceTowers/Magics/UI/毒雾.png" id="5_u1ygg"]
[ext_resource type="Texture2D" uid="uid://cw4a6jrhfvtf7" path="res://Assets/Images/DefenceTowers/Magics/UI/毒雾select.png" id="6_6naev"]
[ext_resource type="Texture2D" uid="uid://v8jqc7le5d2d" path="res://Assets/Images/DefenceTowers/Magics/UI/毒雾no.png" id="7_76hx8"]
[ext_resource type="Texture2D" uid="uid://cwq23kf0b5flc" path="res://Assets/Images/DefenceTowers/Magics/UI/死亡诅咒.png" id="8_i8a78"]
[ext_resource type="Texture2D" uid="uid://fn8vgk0jsthc" path="res://Assets/Images/DefenceTowers/Magics/UI/死亡诅咒select.png" id="9_ni1i2"]
[ext_resource type="Texture2D" uid="uid://bjv8eiowgkkwg" path="res://Assets/Images/DefenceTowers/Magics/UI/死亡诅咒no.png" id="10_f8245"]
[ext_resource type="Texture2D" uid="uid://b35dkxghowdl1" path="res://Assets/Images/DefenceTowers/Magics/Towers/LV4-2/LV4-2-tower.png" id="11_7cgdl"]
[ext_resource type="Texture2D" uid="uid://df2684svepck" path="res://Assets/Animations/Magicians/LV4-2/curse_back_00.png" id="12_46o3x"]
[ext_resource type="Texture2D" uid="uid://cmmgffl4a3cau" path="res://Assets/Animations/Magicians/LV4-2/attack_00.png" id="12_eob1p"]
[ext_resource type="Texture2D" uid="uid://d3pkt3drq7243" path="res://Assets/Animations/Magicians/LV4-2/curse_back_01.png" id="13_qq6th"]
[ext_resource type="Texture2D" uid="uid://bqblsqhjkdgoi" path="res://Assets/Animations/Magicians/LV4-2/curse_back_02.png" id="14_k3nfw"]
[ext_resource type="Texture2D" uid="uid://b3dh2x6myscv8" path="res://Assets/Animations/Magicians/LV4-2/curse_back_03.png" id="15_j6ggh"]
[ext_resource type="Texture2D" uid="uid://dtjkwf84ttwm6" path="res://Assets/Animations/Magicians/LV4-2/curse_back_04.png" id="16_xte3h"]
[ext_resource type="Texture2D" uid="uid://bj8etimi1n8pb" path="res://Assets/Animations/Magicians/LV4-2/curse_back_05.png" id="17_8mi3w"]
[ext_resource type="Texture2D" uid="uid://d3bdrxnss435u" path="res://Assets/Animations/Magicians/LV4-2/curse_back_06.png" id="18_vcrou"]
[ext_resource type="Texture2D" uid="uid://hbwvh1bi2uan" path="res://Assets/Animations/Magicians/LV4-2/curse_back_07.png" id="19_lijwv"]
[ext_resource type="Texture2D" uid="uid://btfcodmtf2b77" path="res://Assets/Animations/Magicians/LV4-2/curse_back_08.png" id="20_6oh6e"]
[ext_resource type="Texture2D" uid="uid://dhbkwweck184x" path="res://Assets/Animations/Magicians/LV4-2/curse_back_09.png" id="21_aiyxm"]
[ext_resource type="Texture2D" uid="uid://cgfl311oqx6qe" path="res://Assets/Animations/Magicians/LV4-2/curse_back_10.png" id="22_jecb1"]
[ext_resource type="Texture2D" uid="uid://die3juauupvgq" path="res://Assets/Animations/Magicians/LV4-2/curse_back_11.png" id="23_kctfk"]
[ext_resource type="Texture2D" uid="uid://ccna3cd0ay7gu" path="res://Assets/Animations/Magicians/LV4-2/curse_back_12.png" id="24_4c5dn"]
[ext_resource type="Texture2D" uid="uid://vkmakleureca" path="res://Assets/Animations/Magicians/LV4-2/curse_00.png" id="25_o1ixb"]
[ext_resource type="Texture2D" uid="uid://4cowuqpnk2r7" path="res://Assets/Animations/Magicians/LV4-2/curse_01.png" id="26_ytbne"]
[ext_resource type="Texture2D" uid="uid://c12i2co7c7xmd" path="res://Assets/Animations/Magicians/LV4-2/curse_02.png" id="27_0o83i"]
[ext_resource type="Texture2D" uid="uid://bqc7gwgnfpdu4" path="res://Assets/Animations/Magicians/LV4-2/curse_03.png" id="28_7o5n8"]
[ext_resource type="Texture2D" uid="uid://dxeonfwjuhqvw" path="res://Assets/Animations/Magicians/LV4-2/curse_04.png" id="29_2yygt"]
[ext_resource type="Texture2D" uid="uid://c6dyh7frub30x" path="res://Assets/Animations/Magicians/LV4-2/curse_05.png" id="30_nars6"]
[ext_resource type="Texture2D" uid="uid://benyso27ribwh" path="res://Assets/Animations/Magicians/LV4-2/curse_06.png" id="31_b5ei5"]
[ext_resource type="Texture2D" uid="uid://dyv3dy242gfws" path="res://Assets/Animations/Magicians/LV4-2/curse_07.png" id="32_pbw4b"]
[ext_resource type="Texture2D" uid="uid://dugf42j0p11io" path="res://Assets/Animations/Magicians/LV4-2/curse_08.png" id="33_mtw1p"]
[ext_resource type="Texture2D" uid="uid://dtpnanijiuhpd" path="res://Assets/Animations/Magicians/LV4-2/curse_09.png" id="34_jx7mw"]
[ext_resource type="Texture2D" uid="uid://ddqnijlvrklw6" path="res://Assets/Animations/Magicians/LV4-2/curse_10.png" id="35_cgc4r"]
[ext_resource type="Texture2D" uid="uid://dgjc751l5eeok" path="res://Assets/Animations/Magicians/LV4-2/curse_11.png" id="36_k0tya"]
[ext_resource type="Texture2D" uid="uid://dhu8oi2x4g8qr" path="res://Assets/Animations/Magicians/LV4-2/curse_12.png" id="37_gecg1"]
[ext_resource type="Texture2D" uid="uid://b4fn7mux4i3yn" path="res://Assets/Animations/Magicians/LV4-2/attack_back_00.png" id="39_jomhp"]
[ext_resource type="Texture2D" uid="uid://dkrak087mjcmh" path="res://Assets/Animations/Magicians/LV4-2/attack_back_01.png" id="40_yvcvq"]
[ext_resource type="Texture2D" uid="uid://dd0v472piaj7y" path="res://Assets/Animations/Magicians/LV4-2/attack_back_02.png" id="41_7wapd"]
[ext_resource type="Texture2D" uid="uid://bn7bar0ponq0b" path="res://Assets/Animations/Magicians/LV4-2/attack_back_03.png" id="42_56kto"]
[ext_resource type="Texture2D" uid="uid://dvhrfygjl4fka" path="res://Assets/Animations/Magicians/LV4-2/attack_back_04.png" id="43_ab4xg"]
[ext_resource type="Texture2D" uid="uid://cmsbi1hllejjv" path="res://Assets/Animations/Magicians/LV4-2/attack_back_05.png" id="44_6ufrh"]
[ext_resource type="Texture2D" uid="uid://efyr8l8brhte" path="res://Assets/Animations/Magicians/LV4-2/attack_back_06.png" id="45_y8xon"]
[ext_resource type="Texture2D" uid="uid://n2uapxwcw4g2" path="res://Assets/Animations/Magicians/LV4-2/attack_back_07.png" id="46_gafac"]
[ext_resource type="Texture2D" uid="uid://bn82sj80rx1vx" path="res://Assets/Animations/Magicians/LV4-2/attack_back_08.png" id="47_ksyhw"]
[ext_resource type="Texture2D" uid="uid://2p67y1dtor7b" path="res://Assets/Animations/Magicians/LV4-2/attack_back_09.png" id="48_iy1q4"]
[ext_resource type="Texture2D" uid="uid://0doisl63bcp6" path="res://Assets/Animations/Magicians/LV4-2/attack_back_10.png" id="49_1im6v"]
[ext_resource type="Texture2D" uid="uid://b0rn7vpknu7ub" path="res://Assets/Animations/Magicians/LV4-2/attack_back_11.png" id="50_kc6hu"]
[ext_resource type="Texture2D" uid="uid://t3vu3hvi676v" path="res://Assets/Animations/Magicians/LV4-2/attack_back_12.png" id="51_1dqxf"]
[ext_resource type="Texture2D" uid="uid://ltwv6iecau7e" path="res://Assets/Animations/Magicians/LV4-2/attack_back_13.png" id="52_vr124"]
[ext_resource type="Texture2D" uid="uid://c4l00j2x37rto" path="res://Assets/Animations/Magicians/LV4-2/attack_back_14.png" id="53_l1sqf"]
[ext_resource type="Texture2D" uid="uid://dkjcn47cbjvpc" path="res://Assets/Animations/Magicians/LV4-2/attack_back_15.png" id="54_gpjlp"]
[ext_resource type="Texture2D" uid="uid://l4rq5nblal6t" path="res://Assets/Animations/Magicians/LV4-2/attack_back_16.png" id="55_1vyee"]
[ext_resource type="Texture2D" uid="uid://dsftnnsewdpp4" path="res://Assets/Animations/Magicians/LV4-2/attack_back_17.png" id="56_6dlyp"]
[ext_resource type="Texture2D" uid="uid://cicieihnty81g" path="res://Assets/Animations/Magicians/LV4-2/attack_back_18.png" id="57_gqk6f"]
[ext_resource type="Texture2D" uid="uid://bp2w8y6m2fwcx" path="res://Assets/Animations/Magicians/LV4-2/attack_back_19.png" id="58_cmhe0"]
[ext_resource type="Texture2D" uid="uid://bqy61ukh2gjvq" path="res://Assets/Animations/Magicians/LV4-2/attack_back_20.png" id="59_1phbo"]
[ext_resource type="Texture2D" uid="uid://is5wa5hne76l" path="res://Assets/Animations/Magicians/LV4-2/attack_back_21.png" id="60_shfle"]
[ext_resource type="Texture2D" uid="uid://cdkr6vtgflq14" path="res://Assets/Animations/Magicians/LV4-2/attack_back_22.png" id="61_gfbe1"]
[ext_resource type="Texture2D" uid="uid://vawxpvvtonc8" path="res://Assets/Animations/Magicians/LV4-2/attack_back_23.png" id="62_o2g2f"]
[ext_resource type="Texture2D" uid="uid://cbsjqjxx2bwbb" path="res://Assets/Animations/Magicians/LV4-2/attack_back_24.png" id="63_ngfho"]
[ext_resource type="Texture2D" uid="uid://bh2efthgdp8g3" path="res://Assets/Animations/Magicians/LV4-2/attack_back_25.png" id="64_h3ass"]
[ext_resource type="Texture2D" uid="uid://nm845e4ikmbh" path="res://Assets/Animations/Magicians/LV4-2/attack_01.png" id="65_moeru"]
[ext_resource type="Texture2D" uid="uid://bloxyq42s0qta" path="res://Assets/Animations/Magicians/LV4-2/attack_02.png" id="66_vsjd4"]
[ext_resource type="Texture2D" uid="uid://e3pdp7jnaddi" path="res://Assets/Animations/Magicians/LV4-2/attack_03.png" id="67_3qq36"]
[ext_resource type="Texture2D" uid="uid://crx0uc7gcjoip" path="res://Assets/Animations/Magicians/LV4-2/attack_04.png" id="68_fhcnl"]
[ext_resource type="Texture2D" uid="uid://ch3bxkv1fj4hc" path="res://Assets/Animations/Magicians/LV4-2/attack_05.png" id="69_aygmx"]
[ext_resource type="Texture2D" uid="uid://cwax2fqlcnllm" path="res://Assets/Animations/Magicians/LV4-2/attack_06.png" id="70_ra8ai"]
[ext_resource type="Texture2D" uid="uid://b7414smsa8x17" path="res://Assets/Animations/Magicians/LV4-2/attack_07.png" id="71_cya8q"]
[ext_resource type="Texture2D" uid="uid://c20im0iyqopto" path="res://Assets/Animations/Magicians/LV4-2/attack_08.png" id="72_twufp"]
[ext_resource type="Texture2D" uid="uid://csxrestk5lded" path="res://Assets/Animations/Magicians/LV4-2/attack_09.png" id="73_71y2y"]
[ext_resource type="Texture2D" uid="uid://ce078cgthksxd" path="res://Assets/Animations/Magicians/LV4-2/attack_10.png" id="74_ln065"]
[ext_resource type="Texture2D" uid="uid://toehrui3xufd" path="res://Assets/Animations/Magicians/LV4-2/attack_11.png" id="75_5l2gk"]
[ext_resource type="Texture2D" uid="uid://m4v5arwv1soi" path="res://Assets/Animations/Magicians/LV4-2/attack_12.png" id="76_63emx"]
[ext_resource type="Texture2D" uid="uid://bpb4bbxtl6lk4" path="res://Assets/Animations/Magicians/LV4-2/attack_13.png" id="77_ujcbp"]
[ext_resource type="Texture2D" uid="uid://dear6wio7i0ab" path="res://Assets/Animations/Magicians/LV4-2/attack_14.png" id="78_pdjp2"]
[ext_resource type="Texture2D" uid="uid://cnp2gafn4sid3" path="res://Assets/Animations/Magicians/LV4-2/attack_15.png" id="79_x1me0"]
[ext_resource type="Texture2D" uid="uid://da5rovc05242i" path="res://Assets/Animations/Magicians/LV4-2/attack_16.png" id="80_2hyiy"]
[ext_resource type="Texture2D" uid="uid://cpv6yen2qbggj" path="res://Assets/Animations/Magicians/LV4-2/attack_17.png" id="81_mx4he"]
[ext_resource type="Texture2D" uid="uid://dhn8o81khq1sc" path="res://Assets/Animations/Magicians/LV4-2/attack_18.png" id="82_jts70"]
[ext_resource type="Texture2D" uid="uid://by7sh1ky3oof" path="res://Assets/Animations/Magicians/LV4-2/attack_19.png" id="83_aw087"]
[ext_resource type="Texture2D" uid="uid://cffwh7ruk8qqv" path="res://Assets/Animations/Magicians/LV4-2/attack_20.png" id="84_5a70j"]
[ext_resource type="Texture2D" uid="uid://cys3ckvq2hq4v" path="res://Assets/Animations/Magicians/LV4-2/attack_21.png" id="85_26u18"]
[ext_resource type="Texture2D" uid="uid://3xee5rjrwran" path="res://Assets/Animations/Magicians/LV4-2/attack_22.png" id="86_g5u5r"]
[ext_resource type="Texture2D" uid="uid://bjwylv61i1xvd" path="res://Assets/Animations/Magicians/LV4-2/attack_23.png" id="87_u5y83"]
[ext_resource type="Texture2D" uid="uid://dy7hm0vkujmfh" path="res://Assets/Animations/Magicians/LV4-2/attack_24.png" id="88_bxo4d"]
[ext_resource type="Texture2D" uid="uid://onowq0eh218n" path="res://Assets/Animations/Magicians/LV4-2/attack_25.png" id="89_r0tg3"]
[ext_resource type="Script" path="res://Scripts/DefenceTowers/MagicTowers/witch.gd" id="90_8b0vq"]
[ext_resource type="Texture2D" uid="uid://c03vs0vnys2bt" path="res://Assets/Images/DefenceTowers/Magics/Towers/LV4-2/heart-green.png" id="105_r1ow5"]

[sub_resource type="Resource" id="Resource_7nxyh"]
script = ExtResource("2_xqequ")
damage_low = 17
damage_high = 28
attack_speed = 1.5

[sub_resource type="AtlasTexture" id="AtlasTexture_8qd58"]
atlas = ExtResource("5_u1ygg")
region = Rect2(6, 6, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpt80"]
atlas = ExtResource("7_76hx8")
region = Rect2(6, 6, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0lq4"]
atlas = ExtResource("8_i8a78")
region = Rect2(6, 6, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bn3u"]
atlas = ExtResource("10_f8245")
region = Rect2(6, 6, 85, 85)

[sub_resource type="SpriteFrames" id="SpriteFrames_4kad2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_7cgdl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_df20i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_46o3x")
}, {
"duration": 1.0,
"texture": ExtResource("13_qq6th")
}, {
"duration": 1.0,
"texture": ExtResource("14_k3nfw")
}, {
"duration": 1.0,
"texture": ExtResource("15_j6ggh")
}, {
"duration": 1.0,
"texture": ExtResource("16_xte3h")
}, {
"duration": 1.0,
"texture": ExtResource("17_8mi3w")
}, {
"duration": 1.0,
"texture": ExtResource("18_vcrou")
}, {
"duration": 1.0,
"texture": ExtResource("19_lijwv")
}, {
"duration": 1.0,
"texture": ExtResource("20_6oh6e")
}, {
"duration": 1.0,
"texture": ExtResource("21_aiyxm")
}, {
"duration": 1.0,
"texture": ExtResource("22_jecb1")
}, {
"duration": 1.0,
"texture": ExtResource("23_kctfk")
}, {
"duration": 1.0,
"texture": ExtResource("24_4c5dn")
}],
"loop": false,
"name": &"curse_back",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_o1ixb")
}, {
"duration": 1.0,
"texture": ExtResource("26_ytbne")
}, {
"duration": 1.0,
"texture": ExtResource("27_0o83i")
}, {
"duration": 1.0,
"texture": ExtResource("28_7o5n8")
}, {
"duration": 1.0,
"texture": ExtResource("29_2yygt")
}, {
"duration": 1.0,
"texture": ExtResource("30_nars6")
}, {
"duration": 1.0,
"texture": ExtResource("31_b5ei5")
}, {
"duration": 1.0,
"texture": ExtResource("32_pbw4b")
}, {
"duration": 1.0,
"texture": ExtResource("33_mtw1p")
}, {
"duration": 1.0,
"texture": ExtResource("34_jx7mw")
}, {
"duration": 1.0,
"texture": ExtResource("35_cgc4r")
}, {
"duration": 1.0,
"texture": ExtResource("36_k0tya")
}, {
"duration": 1.0,
"texture": ExtResource("37_gecg1")
}],
"loop": false,
"name": &"curse_front",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_jomhp")
}, {
"duration": 1.0,
"texture": ExtResource("40_yvcvq")
}, {
"duration": 1.0,
"texture": ExtResource("41_7wapd")
}, {
"duration": 1.0,
"texture": ExtResource("42_56kto")
}, {
"duration": 1.0,
"texture": ExtResource("43_ab4xg")
}, {
"duration": 1.0,
"texture": ExtResource("44_6ufrh")
}, {
"duration": 1.0,
"texture": ExtResource("45_y8xon")
}, {
"duration": 1.0,
"texture": ExtResource("46_gafac")
}, {
"duration": 1.0,
"texture": ExtResource("47_ksyhw")
}, {
"duration": 1.0,
"texture": ExtResource("48_iy1q4")
}, {
"duration": 1.0,
"texture": ExtResource("49_1im6v")
}, {
"duration": 1.0,
"texture": ExtResource("50_kc6hu")
}, {
"duration": 1.0,
"texture": ExtResource("51_1dqxf")
}, {
"duration": 1.0,
"texture": ExtResource("52_vr124")
}, {
"duration": 1.0,
"texture": ExtResource("53_l1sqf")
}, {
"duration": 1.0,
"texture": ExtResource("54_gpjlp")
}, {
"duration": 1.0,
"texture": ExtResource("55_1vyee")
}, {
"duration": 1.0,
"texture": ExtResource("56_6dlyp")
}, {
"duration": 1.0,
"texture": ExtResource("57_gqk6f")
}, {
"duration": 1.0,
"texture": ExtResource("58_cmhe0")
}, {
"duration": 1.0,
"texture": ExtResource("59_1phbo")
}, {
"duration": 1.0,
"texture": ExtResource("60_shfle")
}, {
"duration": 1.0,
"texture": ExtResource("61_gfbe1")
}, {
"duration": 1.0,
"texture": ExtResource("62_o2g2f")
}, {
"duration": 1.0,
"texture": ExtResource("63_ngfho")
}, {
"duration": 1.0,
"texture": ExtResource("64_h3ass")
}],
"loop": false,
"name": &"fog_back",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_eob1p")
}, {
"duration": 1.0,
"texture": ExtResource("65_moeru")
}, {
"duration": 1.0,
"texture": ExtResource("66_vsjd4")
}, {
"duration": 1.0,
"texture": ExtResource("67_3qq36")
}, {
"duration": 1.0,
"texture": ExtResource("68_fhcnl")
}, {
"duration": 1.0,
"texture": ExtResource("69_aygmx")
}, {
"duration": 1.0,
"texture": ExtResource("70_ra8ai")
}, {
"duration": 1.0,
"texture": ExtResource("71_cya8q")
}, {
"duration": 1.0,
"texture": ExtResource("72_twufp")
}, {
"duration": 1.0,
"texture": ExtResource("73_71y2y")
}, {
"duration": 1.0,
"texture": ExtResource("74_ln065")
}, {
"duration": 1.0,
"texture": ExtResource("75_5l2gk")
}, {
"duration": 1.0,
"texture": ExtResource("76_63emx")
}, {
"duration": 1.0,
"texture": ExtResource("77_ujcbp")
}, {
"duration": 1.0,
"texture": ExtResource("78_pdjp2")
}, {
"duration": 1.0,
"texture": ExtResource("79_x1me0")
}, {
"duration": 1.0,
"texture": ExtResource("80_2hyiy")
}, {
"duration": 1.0,
"texture": ExtResource("81_mx4he")
}, {
"duration": 1.0,
"texture": ExtResource("82_jts70")
}, {
"duration": 1.0,
"texture": ExtResource("83_aw087")
}, {
"duration": 1.0,
"texture": ExtResource("84_5a70j")
}, {
"duration": 1.0,
"texture": ExtResource("85_26u18")
}, {
"duration": 1.0,
"texture": ExtResource("86_g5u5r")
}, {
"duration": 1.0,
"texture": ExtResource("87_u5y83")
}, {
"duration": 1.0,
"texture": ExtResource("88_bxo4d")
}, {
"duration": 1.0,
"texture": ExtResource("89_r0tg3")
}],
"loop": false,
"name": &"fog_front",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_eob1p")
}],
"loop": false,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_jomhp")
}, {
"duration": 1.0,
"texture": ExtResource("40_yvcvq")
}, {
"duration": 1.0,
"texture": ExtResource("41_7wapd")
}, {
"duration": 1.0,
"texture": ExtResource("42_56kto")
}, {
"duration": 1.0,
"texture": ExtResource("43_ab4xg")
}, {
"duration": 1.0,
"texture": ExtResource("44_6ufrh")
}, {
"duration": 1.0,
"texture": ExtResource("45_y8xon")
}, {
"duration": 1.0,
"texture": ExtResource("46_gafac")
}, {
"duration": 1.0,
"texture": ExtResource("47_ksyhw")
}, {
"duration": 1.0,
"texture": ExtResource("48_iy1q4")
}, {
"duration": 1.0,
"texture": ExtResource("49_1im6v")
}, {
"duration": 1.0,
"texture": ExtResource("50_kc6hu")
}, {
"duration": 1.0,
"texture": ExtResource("51_1dqxf")
}, {
"duration": 1.0,
"texture": ExtResource("52_vr124")
}, {
"duration": 1.0,
"texture": ExtResource("53_l1sqf")
}, {
"duration": 1.0,
"texture": ExtResource("54_gpjlp")
}, {
"duration": 1.0,
"texture": ExtResource("55_1vyee")
}, {
"duration": 1.0,
"texture": ExtResource("56_6dlyp")
}, {
"duration": 1.0,
"texture": ExtResource("57_gqk6f")
}, {
"duration": 1.0,
"texture": ExtResource("58_cmhe0")
}, {
"duration": 1.0,
"texture": ExtResource("59_1phbo")
}, {
"duration": 1.0,
"texture": ExtResource("60_shfle")
}, {
"duration": 1.0,
"texture": ExtResource("61_gfbe1")
}, {
"duration": 1.0,
"texture": ExtResource("62_o2g2f")
}, {
"duration": 1.0,
"texture": ExtResource("63_ngfho")
}, {
"duration": 1.0,
"texture": ExtResource("64_h3ass")
}],
"loop": false,
"name": &"shoot_back",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_eob1p")
}, {
"duration": 1.0,
"texture": ExtResource("65_moeru")
}, {
"duration": 1.0,
"texture": ExtResource("66_vsjd4")
}, {
"duration": 1.0,
"texture": ExtResource("67_3qq36")
}, {
"duration": 1.0,
"texture": ExtResource("68_fhcnl")
}, {
"duration": 1.0,
"texture": ExtResource("69_aygmx")
}, {
"duration": 1.0,
"texture": ExtResource("70_ra8ai")
}, {
"duration": 1.0,
"texture": ExtResource("71_cya8q")
}, {
"duration": 1.0,
"texture": ExtResource("72_twufp")
}, {
"duration": 1.0,
"texture": ExtResource("73_71y2y")
}, {
"duration": 1.0,
"texture": ExtResource("74_ln065")
}, {
"duration": 1.0,
"texture": ExtResource("75_5l2gk")
}, {
"duration": 1.0,
"texture": ExtResource("76_63emx")
}, {
"duration": 1.0,
"texture": ExtResource("77_ujcbp")
}, {
"duration": 1.0,
"texture": ExtResource("78_pdjp2")
}, {
"duration": 1.0,
"texture": ExtResource("79_x1me0")
}, {
"duration": 1.0,
"texture": ExtResource("80_2hyiy")
}, {
"duration": 1.0,
"texture": ExtResource("81_mx4he")
}, {
"duration": 1.0,
"texture": ExtResource("82_jts70")
}, {
"duration": 1.0,
"texture": ExtResource("83_aw087")
}, {
"duration": 1.0,
"texture": ExtResource("84_5a70j")
}, {
"duration": 1.0,
"texture": ExtResource("85_26u18")
}, {
"duration": 1.0,
"texture": ExtResource("86_g5u5r")
}, {
"duration": 1.0,
"texture": ExtResource("87_u5y83")
}, {
"duration": 1.0,
"texture": ExtResource("88_bxo4d")
}, {
"duration": 1.0,
"texture": ExtResource("89_r0tg3")
}],
"loop": false,
"name": &"shoot_front",
"speed": 45.0
}]

[sub_resource type="Animation" id="Animation_l8ytr"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagicHeart:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_q7tsy"]
resource_name = "Rotate"
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagicHeart:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(1, 1),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 6.28319, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i3pef"]
_data = {
"RESET": SubResource("Animation_l8ytr"),
"Rotate": SubResource("Animation_q7tsy")
}

[sub_resource type="Animation" id="Animation_w714g"]
resource_name = "Magic"
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-35.3768, -0.25, 0, 0.25, 0, -43.0674, -0.25, 0, 0.25, 0, -35.3768, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_umvui"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d40ft"]
_data = {
"Magic": SubResource("Animation_w714g"),
"RESET": SubResource("Animation_umvui")
}

[node name="WitchTower" node_paths=PackedStringArray("magician") instance=ExtResource("1_kp7gh")]
script = ExtResource("2_vxsbu")
start_data = SubResource("Resource_7nxyh")
magician = NodePath("TowerSprite/Witch")
tower_name = "女巫高塔"
tower_texture = ExtResource("2_3pdru")
tower_id = 5
tower_level = 4
tower_value = 770
start_tower_range = 370
tower_skill_levels = Array[int]([0, 0])

[node name="TowerButton" parent="." index="2"]
offset_left = -64.0
offset_top = -96.0
offset_right = 61.0

[node name="Circle" parent="TowerUI" index="4"]
position = Vector2(0, -35)

[node name="TowerSkillButton" parent="TowerUI/Circle" index="1" node_paths=PackedStringArray("linked_tower") instance=ExtResource("4_8fl7e")]
offset_left = -140.001
offset_top = -139.999
offset_right = -55.001
offset_bottom = -54.9993
texture_normal = SubResource("AtlasTexture_8qd58")
texture_pressed = SubResource("AtlasTexture_8qd58")
texture_hover = ExtResource("6_6naev")
texture_disabled = SubResource("AtlasTexture_xpt80")
linked_tower = NodePath("../../..")
skill_name = "毒雾"
skill_prices = Array[int]([180, 120, 120])
skill_intro = PackedStringArray("释放一片持续5秒的毒雾，毒雾中的敌人每0.2秒受到4点真实伤害，同时减速40%，攻击力降低20%。", "释放一片持续5秒的毒雾，毒雾中的敌人每0.2秒受到6点真实伤害，同时减速40%，攻击力降低30%。", "释放一片持续5秒的毒雾，毒雾中的敌人每0.2秒受到8点真实伤害，同时减速40%，攻击力降低40%。")
skill_words = "在深渊中目睹自己躯干的腐朽"

[node name="TowerSkillButton2" parent="TowerUI/Circle" index="2" node_paths=PackedStringArray("linked_tower") instance=ExtResource("4_8fl7e")]
offset_left = 53.7494
offset_top = -140.0
offset_right = 138.749
offset_bottom = -55.0002
texture_normal = SubResource("AtlasTexture_q0lq4")
texture_pressed = SubResource("AtlasTexture_q0lq4")
texture_hover = ExtResource("9_ni1i2")
texture_disabled = SubResource("AtlasTexture_2bn3u")
linked_tower = NodePath("../../..")
skill_name = "死亡诅咒"
skill_id = 1
skill_prices = Array[int]([225, 150, 150])
skill_intro = PackedStringArray("对一名敌人施加持续5秒的死亡诅咒，每0.5秒减少10点生命，诅咒持续期间敌人近战命中率下降30%，收到的伤害额外增加100%，如果敌人死亡则会自爆伤害周围敌人，造成基于其最大生命值50%的魔法伤害。", "对一名敌人施加持续7秒的死亡诅咒，每0.5秒减少10点生命，咒持续期间敌人近战命中率下降40%，收到的伤害额外增加100%，如果敌人死亡则会自爆伤害周围敌人，造成基于其最大生命值75%的魔法伤害。", "对一名敌人施加持续10秒的死亡诅咒，每0.5秒减少10点生命，咒持续期间敌人近战命中率下降50%，收到的伤害额外增加100%，如果敌人死亡则会自爆伤害周围敌人，造成基于其最大生命值100%的魔法伤害。")
skill_words = "胜利并不会眷顾那些持有力量之人。"

[node name="TowerSprite" parent="." index="7"]
position = Vector2(-3.55271e-15, 22)
scale = Vector2(1.30029, 1.30029)
sprite_frames = SubResource("SpriteFrames_4kad2")
offset = Vector2(-4.58394e-08, -53.8341)

[node name="Witch" type="AnimatedSprite2D" parent="TowerSprite" index="0" node_paths=PackedStringArray("witch_tower", "tower")]
position = Vector2(3.07623, -76.9058)
sprite_frames = SubResource("SpriteFrames_df20i")
animation = &"idle_front"
autoplay = "idle_front"
offset = Vector2(-2, -15)
script = ExtResource("90_8b0vq")
witch_tower = NodePath("../..")
tower = NodePath("../..")
summon_frame = 17

[node name="MagicAnimationPlayer" type="AnimationPlayer" parent="TowerSprite/Witch" index="0"]
libraries = {
"": SubResource("AnimationLibrary_i3pef")
}
autoplay = "Rotate"

[node name="MagicHeart" type="Sprite2D" parent="TowerSprite/Witch" index="1"]
position = Vector2(-3.07623, -75)
scale = Vector2(0.1, 0.1)
texture = ExtResource("105_r1ow5")
region_enabled = true
region_rect = Rect2(43, 44, 116, 113)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TowerSprite/Witch/MagicHeart" index="0"]
libraries = {
"": SubResource("AnimationLibrary_d40ft")
}
autoplay = "Magic"
speed_scale = 0.8

[node name="Skill1Timer" type="Timer" parent="." index="9"]
wait_time = 13.0
one_shot = true

[node name="Skill2Timer" type="Timer" parent="." index="10"]
wait_time = 18.0
one_shot = true
